@@ -1,39 +1,22 @@
-package poker;
-
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class Baraja {
-    private List<Carta> cartas;
+    private final List<Carta> cartas;
     private int indice;
-    private String[] palos = {"Corazones", "Diamantes", "Tréboles", "Picas"};
-    private String[] valores = {"2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"};
     public static final Map<String, Integer> VALOR_A_NUMERICO;
     
     static {
-        Map<String, Integer> valorMap = new HashMap<>();
-        valorMap.put("2", 2);
-        valorMap.put("3", 3);
-        valorMap.put("4", 4);
-        valorMap.put("5", 5);
-        valorMap.put("6", 6);
-        valorMap.put("7", 7);
-        valorMap.put("8", 8);
-        valorMap.put("9", 9);
-        valorMap.put("10", 10);
-        valorMap.put("J", 11);
-        valorMap.put("Q", 12);
-        valorMap.put("K", 13);
-        valorMap.put("A", 14);
-        VALOR_A_NUMERICO = Collections.unmodifiableMap(valorMap);
+        VALOR_A_NUMERICO = Map.ofEntries(Map.entry("2", 2), Map.entry("3", 3), Map.entry("4", 4), Map.entry("5", 5), Map.entry("6", 6), Map.entry("7", 7), Map.entry("8", 8), Map.entry("9", 9), Map.entry("10", 10), Map.entry("J", 11), Map.entry("Q", 12), Map.entry("K", 13), Map.entry("A", 14));
     }
     
     public Baraja() {
         cartas = new ArrayList<>();
+        String[] palos = {"Corazones", "Diamantes", "Tréboles", "Picas"};
         for (String palo : palos) {
+            String[] valores = {"2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"};
             for (String valor : valores) {
                 cartas.add(new Carta(palo, valor));
             }
@@ -52,11 +35,7 @@ public class Baraja {
         }
         return cartas.get(indice++);
     }
-    
-    public void reiniciarBaraja() {
-        barajar();
-    }
-    
+
     public static class Carta implements Comparable<Carta> {
         String palo;
         String valor;
